@@ -1,3 +1,37 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 glom/glom.glade
+glom/application.cc
+glom/base_db.cc
+glom/data_structure/field.cc
+glom/dialog_connection.cc
+glom/frame_glom.cc
+glom/mode_data/box_data.cc
+glom/mode_data/box_data_details.cc
+glom/mode_data/box_data_list.cc
+glom/mode_data/box_data_list_related.cc
+glom/mode_data/dialog_choose_field.cc
+glom/mode_data/dialog_choose_relationship.cc
+glom/mode_data/dialog_layout_details.cc
+glom/mode_data/dialog_layout_list.cc
+glom/mode_data/dialog_layout_list_related.cc
+glom/mode_data/notebook_data.cc
+glom/mode_design/box_db_table_relationships.cc
+glom/mode_design/dialog_design.cc
+glom/mode_design/dialog_fields.cc
+glom/mode_design/dialog_relationships.cc
+glom/mode_design/fields/box_db_table_definition.cc
+glom/mode_design/fields/dialog_fieldcalculation.cc
+glom/mode_design/fields/dialog_fielddefinition.cc
+glom/mode_design/users/dialog_groups_list.cc
+glom/mode_design/users/dialog_users_list.cc
+glom/mode_find/box_data_details_find.cc
+glom/mode_find/box_data_list_find.cc
+glom/mode_find/notebook_find.cc
+glom/navigation/box_tables.cc
+glom/utility_widgets/adddel/adddel.cc
+glom/utility_widgets/datawidget.cc
+glom/utility_widgets/db_adddel/db_adddel.cc
+glom/utility_widgets/entryglom.cc
+glom/utility_widgets/flowtablewithfields.cc
+
